test2-2023-07-23.log
regress/test2.fir:247424:17: error: use of unknown declaration 'validif'
    tmp20070 <= validif(head(UInt<3>(6), 1), SInt<24>("b-11111101000010001010101"))
                ^
===-------------------------------------------------------------------------===
                         ... Execution time report ...
===-------------------------------------------------------------------------===
  Total Execution Time: 1.5528 seconds

  ----Wall Time----  ----Name----
    1.5508 ( 99.9%)  FIR Parser
    0.0000 (  0.0%)    Parse annotations
    0.0000 (  0.0%)    Parse OMIR
    1.4704 ( 94.7%)    Parse modules
    0.0020 (  0.1%)  Rest
    1.5528 (100.0%)  Total

{
  totalTime: 1.568,
  maxMemory: 165920768
}
